main/default/objects/Learning_Version__c/Learning_Version__c.object-meta.xml
<CustomObject>
    <label>Learning Version</label>
    <nameField>
        <displayFormat>LEV-{0000000}</displayFormat>
        <label>Learning Version ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>