main/default/objects/Learning_Version__c/fields/Learning__c.field-meta.xml
<CustomField>
    <fullName>Learning__c</fullName>
    <label>Learning</label>
    <referenceTo>Learning__c</referenceTo>
    <relationshipLabel>Learning Versions</relationshipLabel>
    <relationshipName>Learning_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>