main/default/objects/Learning_Version__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <picklist>
        <picklistValues>
            <fullName>Preview</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Published</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>