main/default/objects/Learning_Version__c/fields/Version_selection_behavior__c.field-meta.xml
<CustomField>
    <fullName>Version_selection_behavior__c</fullName>
    <label>Version selection behavior</label>
    <picklist>
        <picklistValues>
            <fullName>Ask user for version selection</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Update version on launch</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>