main/default/objects/Learning_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Learning__c</columns>
    <columns>Learning_Content_ID__c</columns>
    <columns>Quiz__c</columns>
    <columns>Task__c</columns>
    <columns>Training_Resource__c</columns>
    <columns>Type__c</columns>
    <columns>Version__c</columns>
    <columns>Version_selection_behavior__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>